scaffolding exercise MVC

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<h1>Vietnam Experiment</h1>
+<p>under constraction</p>
+
+<p>
+  <a href="users">User ALL</a>
+</p>
+
+<p>
+  <a href="exercises">Exercise ALL</a>
+</p>
