--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Edual Experiment 2014</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Exercise</a></li>
+            <li><a href="#">Submit</a></li>
+            <% if user_signed_in?%>
+              <li><a href="#">Welcome <%= current_user.username %></a></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign in", user_session_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% elsif flash[:alert] %>
+  <p class="alert"><%= alert %></p>
+<% end %>
 <%= yield %>
 
 </body>
